crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary-8.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Binary {
    op: Power,
    left: GetVar {
        name: "a",
    },
    right: GetVar {
        name: "b",
    },
}
