crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Binary(
        Binary {
            op: NullOr,
            left: GetVar(
                GetVar {
                    name: "a",
                },
            ),
            right: GetVar(
                GetVar {
                    name: "b",
                },
            ),
        },
    ),
)
