crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_block-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Block {
        items: [
            Int {
                value: 10,
            },
        ],
        last: None,
    },
)
