crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_block.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Block {
        items: [],
        last: Some(
            Int {
                value: 10,
            },
        ),
    },
)
