crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_class-12.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Class {
    target: Path {
        segments: [
            Segment {
                ident: "Foo",
                generic_args: [],
            },
            Segment {
                ident: "Bar",
                generic_args: [
                    Path {
                        segments: [
                            Segment {
                                ident: "int",
                                generic_args: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
    fields: [
        (
            "a",
            Int {
                value: 0,
            },
        ),
    ],
}
